Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2012-11-05 (SVN):
    * removed the Key_UpdateDest() and IN_UpdateForKeydest() stuff, let
      con_forcedup do its thing in Con_ToggleConsole_f(). added the new
      Key_IsGameKey(), Key_SetDest() and Key_GetDest() functions to the
      Key_ layer, made key_dest static to keys.c. Made Key_SetDest() to
      not only set key_dest, but also to clear the key states whenever
      the gamekey property changes.
    * updated version date stamp to 2012-11-05.

2012-10-31 (SVN):
    * engine: add ImageHasSafeExceptionHandlers=false for h2-mgl builds
      in Visual Studio 2010 projects, because mglfxi.lib is built using
      a very old msvc version: importing the project files and building
      with VS2012 fails linkage with the "mglfxi.lib(MGLFX.dll) : error
      LNK2026: module unsafe for SAFESEH image" message. also added the
      same ImageHasSafeExceptionHandlers=false setting to the x86-debug
      builds of other engine targets in the VS2010 project files, which
      eliminates "LNK4075: ignoring '/EDITANDCONTINUE' due to '/SAFESEH'
      specification" linker warning.
    * h2patch (h2patch3.rc): changed winuser.h include to winresrc.h
      which eliminates some dumb resource compiler warnings from VS2012.

2012-10-23 (SVN):
    * renamed Key_ForceDest to Key_UpdateForDest. added M_Menu_Main_f()
      prototype to menu.h. changed ca_connected checks to ca_active in
      console.c and keys.c, for a possible merge of h2 and h2w versions
      later sometime. updated version date stamp to 2012-10-23.

2012-10-21 (SVN):
    * r_part.c: fixed pointfile loading.

2012-10-21 (SVN):
    * d_local.h, d_vars.c (d_zrowbytes, d_zwidth): changed from unsigned
      to signed int. these were missed in rev.4581 from 2012-03-03.

2012-10-21 (SVN):
    * console.c: made hexen2 version of Con_DrawNotify() to distinguish
      say and say_team like hexenworld does, which adds the necessity of