@@ -56,14 +56,14 @@ to see this definition's existance */
 	m_mload,
 	m_msave
 };
+
 extern	enum m_state_e	m_state;
 extern	enum m_state_e	m_return_state;
-
-extern	qboolean	m_keys_bind_grab;
 
 /* menus */
 void M_Init (void);
 void M_Keydown (int key);
+void M_Keybind (int key);
 void M_ToggleMenu_f (void);
 
 void M_Menu_Main_f (void);
