@@ -39,13 +39,13 @@ enum m_state_e
 	m_quit,
 	m_mconnect
 };
-extern	enum m_state_e	m_state;
 
-extern	qboolean	m_keys_bind_grab;
+extern	enum m_state_e	m_state;
 
 /* menus */
 void M_Init (void);
 void M_Keydown (int key);
+void M_Keybind (int key);
 void M_ToggleMenu_f (void);
 
 void M_Menu_Main_f (void);
